# tunic-language-tool

./: .gitignore  404.html  LICENSE  README.md  build.gradle  index.html  package-lock.json  package.json  pyproject.toml  search.json  settings.gradle  sitemap.xml  vite.config.js  zensical.toml
.github/workflows/: deploy.yml
.run/: dev + JS debug.run.xml  dev.run.xml  generate_letters.run.xml  localhost_5173.run.xml
Features/: index.html
LICENSE/: index.html
Overview/: index.html
Repo/: index.html
TryIt/: index.html
app/: index.html  site.webmanifest
app/assets/: 00000-Cb-LnuPG.js  00001-3xPHcRfg.js  00010-Cl4MsK3d.js  00011-n2iE9iG5.js  00020-DU2GI0hC.js  00021-BseAoOCX.js  00030-DMpGH4Y4.js  00031--wLjGij5.js  00040-DsT6E2vF.js  00041-Y8J5e2X2.js  00050-CSaIs-zY.js  00051-CR1OUxFP.js  00060-BxBgE0zA.js  00061-CDQ92HyS.js  00070-Co0gQhdS.js  00071-Ds8-tbXB.js  00080-Hb22HrHx.js  00081-BAS8qfLr.js  00090-Tb9mAz1V.js  00091-k05kXxpT.js  00100-D5IsA846.js  00101-DmIscyjm.js  00110-DtARnalB.js  00111-Bod3tsLl.js  00120-8daMe_iJ.js  00121-C3tyI7iH.js  00130-DpmkKuAf.js  00131-CyweB1fX.js  00140-qTo5EmLn.js  00141-BBM44-HW.js  00150-CyT4VSvr.js  00151-BAvz_vJc.js  00160-mR4TdFTf.js  00161-CX_0Pbwr.js  00170-DN9rlEIQ.js  00171-BTj0uIgY.js  (+917 more)
doc/: vision.md
docs/: App.md  Features.md  LICENSE.md  Overview.md  Repo.md  Spoilers.md  Tech.md  TryIt.md  index.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
public/: site.webmanifest
scripts/: deploy.sh  generate_letter_svgs.js
src/: TLTApp.vue  main.js
zensical/: index.html
(+62 files in other folders)
