[project]
name = "tunic-language-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Scott Feinstein", email = "Scott_Feinstein@yahoo.com" }
]
requires-python = ">=3.14"
dependencies = [
    "zensical>=0.0.51",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"
